objects/EUR_CRM_Price_Check_Frequency__c.object
<CustomObject>
    <description>PREU Data Model</description>
    <fields>
        <fullName>EUR_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>EUR_CRM_Frequency_Span_Days__c</fullName>
        <label>Interval (Every N Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_No_of_Visits_Within_Interval__c</fullName>
        <label>No. of Visits Within Interval</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Price_Check_Freq_Name_English__c</fullName>
        <description>English value of Price Check Frequency for System Admin</description>
        <label>Price Check Frequency Name (English)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Price Check Frequency (EU)</label>
    <listViews>
        <fullName>EUR_BE_All_Price_Check_Frequency_View</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Price_Check_Frequency__c.EUR_BE_Price_Check_Frequency</value>
        </filters>
        <label>EUR BE All Price Check Frequency View</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_BE</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_DK_Price_Check_Frequency</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Price_Check_Frequency__c.EUR_DK_Price_Check_Frequency</value>
        </filters>
        <label>EUR DK Price Check Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EUR_RU_Price_Check_Frequency</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_External_ID__c</columns>
        <columns>EUR_CRM_Frequency_Span_Days__c</columns>
        <columns>EUR_CRM_No_of_Visits_Within_Interval__c</columns>
        <columns>EUR_CRM_Price_Check_Freq_Name_English__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Price_Check_Frequency__c.EUR_RU_Price_Check_Frequency</value>
        </filters>
        <label>EUR RU Price Check Frequency</label>
        <language>en_US</language>
        <sharedTo>
            <role>EMEA</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Price Check Frequency Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Price Check Frequencies (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_BE_Price_Check_Frequency</fullName>
        <active>true</active>
        <label>EUR BE Price Check Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Price_Check_Frequency</fullName>
        <active>true</active>
        <label>EUR DK Price Check Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_PT_Price_Check_Frequency</fullName>
        <active>true</active>
        <label>EUR PT Price Check Frequency</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_RU_Price_Check_Frequency</fullName>
        <active>true</active>
        <label>EUR RU Price Check Frequency</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>